--- a/ProjectA.csproj
+++ b/ProjectA.csproj
@@ -89,6 +89,12 @@
     <Compile Include="UserControls\Advisor\CRUDAdvisor.xaml.cs">
       <DependentUpon>CRUDAdvisor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Evaluation\AddEvaluationUC.xaml.cs">
+      <DependentUpon>AddEvaluationUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Evaluation\CRUDEvaluationUC.xaml.cs">
+      <DependentUpon>CRUDEvaluationUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Project\AddProjectUC.xaml.cs">
       <DependentUpon>AddProjectUC.xaml</DependentUpon>
     </Compile>
@@ -123,6 +129,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Advisor\CRUDAdvisor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Evaluation\AddEvaluationUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Evaluation\CRUDEvaluationUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -178,6 +192,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.4.7.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.4.7.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
