--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks.Material" version="4.11.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.1.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.7.0" targetFramework="net472" />
