--- a/ProjectA.csproj
+++ b/ProjectA.csproj
@@ -37,8 +37,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
       <HintPath>packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.3, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>packages\iTextSharp.5.5.13.3\lib\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro.IconPacks.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a, processorArchitecture=MSIL">
       <HintPath>packages\MahApps.Metro.IconPacks.Material.4.11.0\lib\net47\MahApps.Metro.IconPacks.Core.dll</HintPath>
@@ -98,6 +104,15 @@
     <Compile Include="UserControls\Evaluation\CRUDEvaluationUC.xaml.cs">
       <DependentUpon>CRUDEvaluationUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Evaluation\MarkEvaluationDisplayUC.xaml.cs">
+      <DependentUpon>MarkEvaluationDisplayUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Evaluation\MarkEvaluationFormUC.xaml.cs">
+      <DependentUpon>MarkEvaluationFormUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Group\CRUDGroupUC.xaml.cs">
+      <DependentUpon>CRUDGroupUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Project\AddProjectUC.xaml.cs">
       <DependentUpon>AddProjectUC.xaml</DependentUpon>
     </Compile>
@@ -140,6 +155,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Evaluation\CRUDEvaluationUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Evaluation\MarkEvaluationDisplayUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Evaluation\MarkEvaluationFormUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Group\CRUDGroupUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
