--- a/ProjectA.csproj
+++ b/ProjectA.csproj
@@ -113,6 +113,9 @@
     <Compile Include="UserControls\Group\CRUDGroupUC.xaml.cs">
       <DependentUpon>CRUDGroupUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Group\EditGroupUC.xaml.cs">
+      <DependentUpon>EditGroupUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Project\AddProjectUC.xaml.cs">
       <DependentUpon>AddProjectUC.xaml</DependentUpon>
     </Compile>
@@ -167,6 +170,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Group\CRUDGroupUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Group\EditGroupUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
