--- a/packages.config
+++ b/packages.config
@@ -9,4 +9,6 @@
   <package id="MaterialDesignThemes" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net472" />
+  <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net472" />
 </packages>
